# McCarthy-Lisp-in-Python

./: .gitignore  LICENSE  README.md  eq.lisp  eval.py  justfile  pyproject.toml  repl.py  subst.lisp
examples/: compose.lisp  eq.lisp  firstatom.lisp  fixpoint-map.lisp  flatten.lisp  member.lisp  reverse.lisp  subst.lisp
mclispy/: __init__.py  cli.py  core.lisp  lisp.py
test/: test_cli.py  test_examples.py  test_parser.py  test_primitives.py
