[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mclispy"
version = "0.1.0"
description = "A tiny McCarthy Lisp interpreter in Python."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Interpreters"
]

[dependency-groups]
dev = ["pytest>=8,<9"]

[tool.uv]
managed = true

[project.scripts]
mclispy-eval = "mclispy.cli:eval_main"
mclispy-repl = "mclispy.cli:repl_main"

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.setuptools]
packages = ["mclispy"]

[tool.setuptools.package-data]
mclispy = ["core.lisp"]
